--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,11 +21,12 @@
 title: SynthSculptor
 email: bbwashi@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  SynthSculptor is intended to be a gallery chronicalling ongoing projects as well 
-  as past ones; each project a unique sculpture in the landscape of technology. 
-  Immerse yourself in the harmonious blend of algorithms and 
-  creativity, where every line of code resonates like notes in a grand composition.
-
+  A dynamic gallery chronicling both ongoing and past projects. Each endeavor is
+  a unique sculpture in the ever-evolving landscape of technology. Immerse
+  yourself in the harmonious blend of algorithms and creativity, where every
+  line of code resonates like notes in a grand composition. Explore the
+  intersection of innovation and artistry at SynthSculptor, where software
+  engineering becomes a captivating journey through digital landscapes.
 domain: darbumas.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://darbumas.github.io
