--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,30 +1,27 @@
 # site settings
 
-title: cvless
-description: Jekyll theme for a beautiful online CV
+title: SynthSculptor
+description: A dynamic gallery chronicling both ongoing and past projects.
 taglong: Jekyll theme for a beautiful online CV
 tagshort: Jekyll theme
-url: https://cvless.netlify.app
+url: https://darbumas.github.io
 baseurl: ""
 permalink: pretty
-repo: https://github.com/username/username.github.io
+repo: https://github.com/darbumas/username.github.io
 
 # author settings
 
 author:
-  name: Place Holder
-  email: username@domain.com
+  name: B. Bwashi
+  email: bbwashi@outlook.com
 photo: /assets/jpg/photo.jpg
 
 # social media links
 
 social:
-  facebook: username
-  github: username
-  instagram: username
-  linkedin: username
-  stackoverflow: 0000000/username
-  twitter: username
+  github: darbumas
+  linkedin: bbwashi
+  twitter: darbumas
 
 # build settings
 
